// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`user resolvers mutation user can attach github to his account 1`] = `
Object {
  "email": "flyin@example.com",
  "github": Object {
    "avatar": null,
    "githubId": "1234",
    "name": "flyin",
  },
  "isAdmin": false,
}
`;

exports[`user resolvers mutation user can register with email and password 1`] = `
Object {
  "createUser": Object {
    "email": "a@b.ru",
    "isAdmin": false,
  },
}
`;

exports[`user resolvers mutation user can register with github token 1`] = `
Object {
  "email": "primary-verified@example.com",
  "github": Object {
    "avatar": null,
    "githubId": "1234",
    "name": "flyin",
  },
  "isAdmin": false,
}
`;

exports[`user resolvers mutation user cant register with invalid data 1`] = `
Array [
  [GraphQLError: User validation failed: email: Email address \`a@\` is incorrect],
]
`;
